# reports-dbt

./: .gitignore  Makefile  README.md  build.sh  dbt_project.yml  profiles.yml  pyproject.toml  requirements.txt  run.sh
.archive/: database.sql
macros/: override_default_macros.sql  post_hook.sql
models/: schema.yml
models/marts/: choices.sql  labels.sql  report_classifications.sql  reports.sql  tasks.sql  textareas.sql  upload_tasks.sql
models/staging/: stg_annotations.sql  stg_choices.sql  stg_labels.sql  stg_reports.sql  stg_task_completion.sql
snapshots/marts/: report_classifications_snapshot.sql
