[tool.poetry]
name = "reports-dbt"
version = "0.1.0"
description = ""
authors = ["Göktuğ Aşcı <g.asci@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.data.dependencies]
dbt-postgres = "1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
